--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
+
+
+
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
@@ -15,6 +18,12 @@
 <p>
   Fork me? Fork you, @octocat!
 </p>
+
+<p>
+  Fork me? Fork you, @octocat! New
+</p>
+
+
 
 </body>
 </html>
